fixed recaptcha issue

--- a/complaint_register/templates/submit_complaint.html
+++ b/complaint_register/templates/submit_complaint.html
@@ -36,9 +36,7 @@
         {{ form.captcha.label }} {{ form.captcha }}
         {% if form.captcha.errors %}
         <ul class="errors">
-            {% for error in form.captcha.errors %}
-            <li>{{ error }}</li>
-            {% endfor %}
+            So You Are A Robot Huh?
         </ul>
         {% endif %}
         {% endif %}
