--- a/complaint_register/templates/base.html
+++ b/complaint_register/templates/base.html
@@ -7,6 +7,8 @@
     <title>Your App</title>
     <!-- Include your CSS and JavaScript files -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" />
     <style>
         .flash-messages {
             list-style-type: none;
